<resources>
    <string name="app_name">Joy0613PhoneMessaging</string>
    <string name="contact_name">Joe Blow</string>
    <string name="contact_text_size">24sp</string>
    <string name="phone_number">14155551212</string>
    <string name="make_a_call">Make a call</string>
    <string name="enter_message_here">Enter message here</string>
    <string name="enter_a_phone_number">Enter a phone number</string>
    <string name="send_a_message">send a message</string>
</resources>