<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/contact_name"
        android:textColor="@android:color/primary_text_light"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/number_to_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/phone_number"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_name" />

    <EditText
        android:id="@+id/sms_message"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/enter_message_here"
        android:inputType="textMultiLine"
        android:textAlignment="viewEnd"
        app:layout_constraintEnd_toEndOf="@+id/number_to_call"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_to_call" />

    <ImageButton
        android:id="@+id/phone_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/make_a_call"
        android:onClick="dialNumber"
        app:srcCompat="@drawable/ic_call_black_24"
        app:layout_constraintLeft_toRightOf="@id/number_to_call"
        app:layout_constraintStart_toEndOf="@id/number_to_call"
        app:layout_constraintTop_toBottomOf="@id/contact_name" />
    <ImageButton
        android:id="@+id/message_icon"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/send_a_message"
        android:onClick="smsSendMessage"
        app:layout_constraintBottom_toBottomOf="@+id/sms_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/sms_message"
        app:layout_constraintStart_toEndOf="@+id/sms_message"
        app:srcCompat="@drawable/ic_message_24" />

</androidx.constraintlayout.widget.ConstraintLayout>